# tplegal-proofreading

./: PROJECT_INSTRUCTIONS_V2.md  README.md  __init__.py  apply_corrections.py  checkers.py  docx_io.py  extract_text.py  merge_runs.py  minidom_helpers.py  ooxml.py  proofread_docx.py  pyproject.toml  verify_docx.py
tests/: test_apply_corrections.py  test_checkers.py  test_docx_io.py  test_extract_text.py  test_merge_runs_fix.py  test_ooxml.py  test_proofread_docx.py  test_verify_docx.py
