[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tplegal-proofreading"
version = "2.0.0"
description = "DOCX proofreading with tracked changes — Claude-as-corrector toolkit"
requires-python = ">=3.10"
dependencies = [
    "lxml",
    "defusedxml",
]

[project.scripts]
extract-text = "extract_text:main"
apply-corrections = "apply_corrections:main"
verify-docx = "verify_docx:main"

[tool.setuptools]
py-modules = [
    "extract_text",
    "apply_corrections",
    "verify_docx",
    "ooxml",
    "docx_io",
    "minidom_helpers",
]
